// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultSearchControl desktop renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
  >
    <div
      class="MuiGrid-root-32 makeStyles-firstRow-1 MuiGrid-container-33 MuiGrid-align-items-xs-center-41 MuiGrid-justify-content-xs-space-between-52"
    >
      <div>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-347"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Only show deposits
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-347"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Hide dust
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-label-202"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-347"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              🚀 Boosted Vaults
            </p>
          </span>
        </label>
      </div>
    </div>
    <div
      class="MuiGrid-root-32 makeStyles-root-203 MuiGrid-container-33"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-206 makeStyles-formControl-204"
        >
          <label
            class="MuiFormLabel-root-222 MuiInputLabel-root-210 MuiInputLabel-formControl-216 MuiInputLabel-animated-219 MuiInputLabel-outlined-221"
            data-shrink="false"
            id="status-selector-id-label"
          >
            Status
          </label>
          <div
            class="MuiInputBase-root-256 MuiOutlinedInput-root-241 MuiInputBase-formControl-257"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="status-selector-id-label status-selector"
              class="MuiSelect-root-230 MuiSelect-select-231 MuiSelect-selectMenu-234 MuiSelect-outlined-233 MuiInputBase-input-267 MuiOutlinedInput-input-251"
              id="status-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-240"
              data-testid="status-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-236 MuiSelect-iconOutlined-239"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-278 MuiOutlinedInput-notchedOutline-250"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-280"
              >
                <span>
                  Status
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-206 makeStyles-formControl-282"
        >
          <label
            class="MuiFormLabel-root-222 MuiInputLabel-root-210 MuiInputLabel-formControl-216 MuiInputLabel-animated-219 MuiInputLabel-outlined-221"
            data-shrink="false"
            id="platform-selector-id-label"
          >
            Platform
          </label>
          <div
            class="MuiInputBase-root-256 MuiOutlinedInput-root-241 MuiInputBase-formControl-257"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="platform-selector-id-label platform-selector"
              class="MuiSelect-root-230 MuiSelect-select-231 MuiSelect-selectMenu-234 MuiSelect-outlined-233 MuiInputBase-input-267 MuiOutlinedInput-input-251"
              id="platform-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-240"
              data-testid="platform-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-236 MuiSelect-iconOutlined-239"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-278 MuiOutlinedInput-notchedOutline-250"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-280"
              >
                <span>
                  Platform
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-206 makeStyles-formControl-284"
        >
          <label
            class="MuiFormLabel-root-222 MuiInputLabel-root-210 MuiInputLabel-formControl-216 MuiInputLabel-animated-219 MuiInputLabel-outlined-221"
            data-shrink="false"
            id="rewards-selector-id-label"
          >
            Rewards
          </label>
          <div
            class="MuiInputBase-root-256 MuiOutlinedInput-root-241 MuiInputBase-formControl-257"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="rewards-selector-id-label rewards-selector"
              class="MuiSelect-root-230 MuiSelect-select-231 MuiSelect-selectMenu-234 MuiSelect-outlined-233 MuiInputBase-input-267 MuiOutlinedInput-input-251"
              id="rewards-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-240"
              data-testid="rewards-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-236 MuiSelect-iconOutlined-239"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-278 MuiOutlinedInput-notchedOutline-250"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-280"
              >
                <span>
                  Rewards
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66 MuiGrid-grid-md-true-94 MuiGrid-grid-lg-6-114"
      >
        <div
          class="MuiFormControl-root-206 MuiTextField-root-288 makeStyles-root-286"
        >
          <div
            class="MuiInputBase-root-256 MuiOutlinedInput-root-241 MuiInputBase-formControl-257 MuiInputBase-adornedEnd-261 MuiOutlinedInput-adornedEnd-246"
          >
            <input
              aria-invalid="false"
              aria-label="Vault Search"
              class="MuiInputBase-input-267 MuiOutlinedInput-input-251 MuiInputBase-inputAdornedEnd-272 MuiOutlinedInput-inputAdornedEnd-255"
              placeholder="Search by vault name, token, rewards..."
              type="text"
              value=""
            />
            <div
              class="MuiInputAdornment-root-289 MuiInputAdornment-positionEnd-292"
            >
              <button
                aria-label="search"
                class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-icon-287 MuiIconButton-sizeSmall-158"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-159"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-347"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-278 MuiOutlinedInput-notchedOutline-250"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-279"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-auto-65"
      >
        <button
          class="MuiButtonBase-root-160 MuiButton-root-296 MuiButton-text-298 MuiButton-textPrimary-299 MuiButton-fullWidth-319"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-297"
          >
            CLEAR ALL
          </span>
          <span
            class="MuiTouchRipple-root-347"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultSearchControl mobile opens filter dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-container-33"
      >
        <div
          class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
        >
          <label
            class="MuiFormControlLabel-root-135"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
            >
              <span
                class="MuiIconButton-label-159"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-150"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-163"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-349"
              />
            </span>
            <span
              class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
            >
              <p
                class="MuiTypography-root-172 MuiTypography-body2-173"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-item-34 MuiGrid-justify-content-xs-flex-end-51 MuiGrid-grid-xs-true-66"
        >
          <button
            class="MuiButtonBase-root-160 MuiButton-root-296 MuiButton-text-298 makeStyles-button-347"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-297 makeStyles-buttonLabel-348"
            >
              <p
                class="MuiTypography-root-172 MuiTypography-body2-173 MuiTypography-displayInline-200"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-349"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialog-root-332"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-359"
      style="opacity: 1;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-335 MuiDialog-scrollPaper-333"
      role="none presentation"
      style="opacity: 1;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-4 MuiDialog-paper-336 MuiDialog-paperScrollPaper-337 MuiDialog-paperWidthXl-344 MuiDialog-paperFullWidth-345 MuiPaper-elevation24-31 MuiPaper-rounded-5"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-361 makeStyles-title-325"
        >
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-align-items-xs-center-41 MuiGrid-justify-content-xs-space-between-52"
          >
            <h5
              class="MuiTypography-root-172 MuiTypography-h5-181 MuiTypography-displayInline-200"
            >
              Filter & Search
            </h5>
            <button
              aria-label="close vault filters"
              class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-closeButton-327"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-159"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-163"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-349"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-362 makeStyles-content-326"
        >
          <hr
            class="MuiDivider-root-364 makeStyles-topDivider-330"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-direction-xs-column-36"
          >
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-349"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    Only show deposits
                  </p>
                </span>
              </label>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-349"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    Hide dust
                  </p>
                </span>
              </label>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135 makeStyles-label-371"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-349"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    🚀 Boosted Vaults
                  </p>
                </span>
              </label>
            </div>
          </div>
          <hr
            class="MuiDivider-root-364 makeStyles-divider-329"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-direction-xs-column-36"
          >
            <div
              class="MuiGrid-root-32 makeStyles-select-328 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-374 makeStyles-formControl-372"
              >
                <label
                  class="MuiFormLabel-root-390 MuiInputLabel-root-378 MuiInputLabel-formControl-384 MuiInputLabel-animated-387 MuiInputLabel-shrink-386 MuiInputLabel-outlined-389 MuiFormLabel-filled-395"
                  data-shrink="true"
                  id="status-selector-id-label"
                >
                  Status
                </label>
                <div
                  class="MuiInputBase-root-424 MuiOutlinedInput-root-409 MuiInputBase-formControl-425"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="status-selector-id-label status-selector"
                    class="MuiSelect-root-398 MuiSelect-select-399 MuiSelect-selectMenu-402 MuiSelect-outlined-401 MuiInputBase-input-435 MuiOutlinedInput-input-419"
                    id="status-selector"
                    role="button"
                    tabindex="0"
                  >
                    guarded,  experimental
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-408"
                    data-testid="status-selector-input"
                    tabindex="-1"
                    value="guarded,experimental"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-404 MuiSelect-iconOutlined-407"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-446 MuiOutlinedInput-notchedOutline-418"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-448 PrivateNotchedOutline-legendNotched-449"
                    >
                      <span>
                        Status
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 makeStyles-select-328 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-374 makeStyles-formControl-450"
              >
                <label
                  class="MuiFormLabel-root-390 MuiInputLabel-root-378 MuiInputLabel-formControl-384 MuiInputLabel-animated-387 MuiInputLabel-shrink-386 MuiInputLabel-outlined-389 MuiFormLabel-filled-395"
                  data-shrink="true"
                  id="platform-selector-id-label"
                >
                  Platform
                </label>
                <div
                  class="MuiInputBase-root-424 MuiOutlinedInput-root-409 MuiInputBase-formControl-425"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="platform-selector-id-label platform-selector"
                    class="MuiSelect-root-398 MuiSelect-select-399 MuiSelect-selectMenu-402 MuiSelect-outlined-401 MuiInputBase-input-435 MuiOutlinedInput-input-419"
                    id="platform-selector"
                    role="button"
                    tabindex="0"
                  >
                    Convex,  Curve
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-408"
                    data-testid="platform-selector-input"
                    tabindex="-1"
                    value="Convex,Curve"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-404 MuiSelect-iconOutlined-407"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-446 MuiOutlinedInput-notchedOutline-418"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-448 PrivateNotchedOutline-legendNotched-449"
                    >
                      <span>
                        Platform
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 makeStyles-select-328 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-374 makeStyles-formControl-452"
              >
                <label
                  class="MuiFormLabel-root-390 MuiInputLabel-root-378 MuiInputLabel-formControl-384 MuiInputLabel-animated-387 MuiInputLabel-shrink-386 MuiInputLabel-outlined-389 MuiFormLabel-filled-395"
                  data-shrink="true"
                  id="rewards-selector-id-label"
                >
                  Rewards
                </label>
                <div
                  class="MuiInputBase-root-424 MuiOutlinedInput-root-409 MuiInputBase-formControl-425"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="rewards-selector-id-label rewards-selector"
                    class="MuiSelect-root-398 MuiSelect-select-399 MuiSelect-selectMenu-402 MuiSelect-outlined-401 MuiInputBase-input-435 MuiOutlinedInput-input-419"
                    id="rewards-selector"
                    role="button"
                    tabindex="0"
                  >
                    DCA,  Compounder
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-408"
                    data-testid="rewards-selector-input"
                    tabindex="-1"
                    value="DCA,Compounder"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-404 MuiSelect-iconOutlined-407"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-446 MuiOutlinedInput-notchedOutline-418"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-448 PrivateNotchedOutline-legendNotched-449"
                    >
                      <span>
                        Rewards
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-374 MuiTextField-root-456 makeStyles-root-454"
              >
                <div
                  class="MuiInputBase-root-424 MuiOutlinedInput-root-409 MuiInputBase-formControl-425 MuiInputBase-adornedEnd-429 MuiOutlinedInput-adornedEnd-414"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Vault Search"
                    class="MuiInputBase-input-435 MuiOutlinedInput-input-419 MuiInputBase-inputAdornedEnd-440 MuiOutlinedInput-inputAdornedEnd-423"
                    placeholder="Search by vault name, token, rewards..."
                    type="text"
                    value="bitcoin convex"
                  />
                  <div
                    class="MuiInputAdornment-root-457 MuiInputAdornment-positionEnd-460"
                  >
                    <button
                      aria-label="search"
                      class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-icon-455 MuiIconButton-sizeSmall-158"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label-159"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-163"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root-349"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-446 MuiOutlinedInput-notchedOutline-418"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-447"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root-364 makeStyles-divider-329"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-spacing-xs-2-56 MuiGrid-justify-content-xs-flex-end-51"
          >
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <button
                class="MuiButtonBase-root-160 MuiButton-root-296 MuiButton-text-298 MuiButton-textPrimary-299"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-297"
                >
                  Clear All
                </span>
                <span
                  class="MuiTouchRipple-root-349"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <button
                class="MuiButtonBase-root-160 MuiButton-root-296 MuiButton-contained-304 MuiButton-containedPrimary-305"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-297"
                >
                  Apply Filters
                </span>
                <span
                  class="MuiTouchRipple-root-349"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`VaultSearchControl mobile renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
  >
    <div
      class="MuiGrid-root-32 MuiGrid-container-33"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <label
          class="MuiFormControlLabel-root-135"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-349"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Only show deposits
            </p>
          </span>
        </label>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-item-34 MuiGrid-justify-content-xs-flex-end-51 MuiGrid-grid-xs-true-66"
      >
        <button
          class="MuiButtonBase-root-160 MuiButton-root-296 MuiButton-text-298 makeStyles-button-347"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-297 makeStyles-buttonLabel-348"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173 MuiTypography-displayInline-200"
            >
              Filters
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-349"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
